numerical bloch waves

--- a/2beam_python/plotcontrast.ipynb
+++ b/2beam_python/plotcontrast.ipynb
@@ -46,21 +46,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.55523819 -0.56909056 -0.59812541 ...  0.          0.\n",
+      "   0.        ]\n",
+      " [-0.553085   -0.58231113 -0.62576814 ...  0.          0.\n",
+      "   0.        ]\n",
+      " [-0.55147385 -0.59503314 -0.65014722 ...  0.          0.\n",
+      "   0.        ]\n",
+      " ...\n",
+      " [-0.55825036 -0.49875862 -0.45616035 ...  0.          0.\n",
+      "   0.        ]\n",
+      " [-0.58664232 -0.53467012 -0.4938762  ...  0.          0.\n",
+      "   0.        ]\n",
+      " [-0.6132479  -0.56592606 -0.5232549  ...  0.          0.\n",
+      "   0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fileNameintScrew = 'intensityPsiScrew.out'\n",
+    "fileNamerealScrew = 'realPsiScrew.out'\n",
+    "\n",
+    "nx = 100\n",
+    "ny = 300\n",
+    "nz = 200\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "PsiIntensityDataScrew = np.zeros((ny, nz))\n",
+    "\n",
+    "normIscrew_list = []\n",
+    "    \n",
+    "with open(fileNameintScrew, \"r\") as data:\n",
+    "        for line in data: #read one line at a time               \n",
+    "            column = line.replace(']',' ').replace('[',' ').split()  \n",
+    "\n",
+    "            normIscrew_list.append(float(column[0]))\n",
+    "                                     \n",
+    "normIscrew_list_ar = np.array(normIscrew_list)\n",
+    "\n",
+    "PsiIntensityDataScrew[:,:] = normIscrew_list_ar.reshape((ny, nz)) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "PsiRealDataScrew = np.zeros((ny, nz))\n",
+    "\n",
+    "normIrscrew_list = []    \n",
+    "    \n",
+    "    \n",
+    "with open(fileNamerealScrew, \"r\") as data:\n",
+    "        for line in data: #read one line at a time               \n",
+    "            column = line.replace(']',' ').replace('[',' ').split()  \n",
+    "\n",
+    "            normIrscrew_list.append(float(column[0]))\n",
+    "                                     \n",
+    "normIrscrew_list_ar = np.array(normIrscrew_list)\n",
+    "\n",
+    "PsiRealDataScrew[:,:] = normIrscrew_list_ar.reshape((ny, nz)) \n",
+    "print PsiIntensityDataPerfect- PsiIntensityDataScrew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder =  'test'\n",
-    "fileName = 'test/perfect_contrast-Screw--70_0tilt-0._5w.out'\n",
+    "fileNameintPerfect = 'intensityPsiPerfect.out'\n",
+    "fileNamerealPerfect = 'realPsiPerfect.out'\n",
+    "\n",
     "\n",
     "nx = 100\n",
-    "ny = 100\n",
+    "ny = 300\n",
+    "nz = 200\n",
     "\n",
-    "ContrastData = np.zeros((nx, ny))\n",
+    "\n",
+    "PsiIntensityDataPerfect = np.zeros((ny, nz))\n",
     "\n",
     "normI_list = []\n",
     "    \n",
-    "with open(fileName, \"r\") as data:\n",
+    "with open(fileNameintPerfect, \"r\") as data:\n",
     "        for line in data: #read one line at a time               \n",
     "            column = line.replace(']',' ').replace('[',' ').split()  \n",
     "\n",
@@ -68,24 +141,43 @@
     "                                     \n",
     "normI_list_ar = np.array(normI_list)\n",
     "\n",
-    "ContrastData[:,:] = normI_list_ar.reshape((nx, ny)) "
+    "PsiIntensityDataPerfect[:,:] = normI_list_ar.reshape((ny, nz)) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "PsiRealDataPerfect = np.zeros((ny, nz))\n",
+    "\n",
+    "normIr_list = []    \n",
+    "    \n",
+    "    \n",
+    "with open(fileNamerealPerfect, \"r\") as data:\n",
+    "        for line in data: #read one line at a time               \n",
+    "            column = line.replace(']',' ').replace('[',' ').split()  \n",
+    "\n",
+    "            normIr_list.append(float(column[0]))\n",
+    "                                     \n",
+    "normIr_list_ar = np.array(normIr_list)\n",
+    "\n",
+    "PsiRealDataPerfect[:,:] = normIr_list_ar.reshape((ny, nz)) \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~elena.pascal/1767.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~elena.pascal/1877.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,11 +185,131 @@
    "source": [
     "dataC = [\n",
     "    go.Contour(\n",
-    "        z=ContrastData\n",
+    "        z = np.transpose(PsiIntensityDataScrew), \n",
+    "        y = np.linspace(0., -2., 200),\n",
+    "        x = np.linspace(-1.50, 1.50, 300),\n",
+    "         \n",
+    "        contours=dict(\n",
+    "         showlines=False   \n",
+    "        )\n",
     "    )\n",
     "]\n",
     "py.iplot(dataC)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~elena.pascal/1865.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataC = [\n",
+    "    go.Contour(\n",
+    "        z = np.transpose(PsiIntensityDataPerfect- PsiIntensityDataScrew), \n",
+    "        y = np.linspace(0., -0.5, 50),\n",
+    "        x = np.linspace(-1.50, 1.50, 300),\n",
+    "        \n",
+    "        contours=dict(\n",
+    "         showlines=False   \n",
+    "        )\n",
+    "    )\n",
+    "]\n",
+    "py.iplot(dataC)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~elena.pascal/1889.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataC = [\n",
+    "    go.Contour(\n",
+    "        z = np.transpose(PsiRealDataScrew), \n",
+    "        y = np.linspace(0., -2., 200),\n",
+    "        x = np.linspace(-1.5, 1.5, 300),\n",
+    " \n",
+    "        autocontour=False,\n",
+    "        contours=dict(\n",
+    "            showlines=False, \n",
+    "            start=-0.8,\n",
+    "            end=0.8,\n",
+    "            size=0.2,\n",
+    "        ),\n",
+    "\n",
+    "    )\n",
+    "]\n",
+    "py.iplot(dataC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~elena.pascal/1869.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataC = [\n",
+    "    go.Contour(\n",
+    "        z = np.transpose(PsiRealDataPerfect- PsiRealDataScrew), \n",
+    "        y = np.linspace(0., -0.5, 50),\n",
+    "        x = np.linspace(-1.50, 1.50, 300),\n",
+    "      \n",
+    "        contours=dict(\n",
+    "         showlines=False   \n",
+    "        )\n",
+    "    )\n",
+    "]\n",
+    "py.iplot(dataC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1839,7 +2051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
